# sdr-lead-research-agent

./: .env.example  .gitignore  README.md  database.db  pyproject.toml
src/lra/: agent.py  api.py  cli.py  config.py  database.py  llm.py  mcp_server.py  schemas.py
src/lra/tools/: extract_tech_stack.py  fetch_homepage.py
tests/evals/: golden_profiles.py  rubric.py  test_ground_truth_evals.py  test_llm_judge_evals.py  test_schema_evals.py
tests/unit/: conftest.py  test_api.py  test_database.py  test_extract_tech_stack.py  test_fetch_homepage.py
