[project]
name = "sdr-lead-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "typer>=0.26.6",
]


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
strict = true

[project.scripts]
lra = "lra.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lra = ["py.typed"]